refactor: enhance CORS configuration in SecurityConfig to support production and development environments